# XmlQt

./: .gitignore  CMakeLists.txt  compile_commands.json  input.xml  res.html  transform.xsl
Embedded/: LinqToXml.cs  LinqToXml.sln
include/: ComboBoxPopulator.h  MainWindow.h  Service.h  XmlDomFilterer.h  XmlDomReader.h  XmlFiltererStrategy.cpp  XmlFiltererStrategy.h  XmlLinqFilterer.h  XmlSaxFilterer.h  XmlSaxHandler.h
src/: ComboBoxPopulator.cpp  MainWindow.cpp  Service.cpp  XmlDomFilterer.cpp  XmlDomReader.cpp  XmlLinqFilterer.cpp  XmlSaxFilterer.cpp  XmlSaxHandler.cpp  main.cpp
